Spacing fixes

--- a/public/stylesheets/util.css
+++ b/public/stylesheets/util.css
@@ -72,7 +72,7 @@ ul.features, ul.projects {
       border-color: #FF7F00; }
     ul.features li h5,     ul.projects li h5 {
       margin: 0.1em 0;
-      line-height: 1.3em !important; }
+      line-height: 1em !important; }
     ul.features li p,     ul.projects li p {
       font-size: 85%;
       line-height: 1.3em !important;
@@ -82,7 +82,7 @@ ul.features, ul.projects {
 
 ul.projects li {
   margin-right: 0.6em !important;
-  height: 16em;
+  height: 19em;
   padding: 0; }
 
 .float-left {
